--- a/css/main.css
+++ b/css/main.css
@@ -1649,7 +1649,7 @@ header .header-logo a {
   margin: 0 0 .9rem 0;
 }
 .home-content-tablecell p {
-  font-family: "montserrat-bold", sans-serif;
+  font-family: "montserrat-regular", sans-serif;
   font-size: 1.8rem;
   color: white;
   letter-spacing: .3rem;
