--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,18 @@ a:hover, a:focus {
   color: #137868;
 }
 
+.font-yellow {
+  color: #e6c16f!important;
+}
+
+.font-teal-dark {
+  color: #142b2b!important;
+}
+
+.font-teal-light {
+  color: #137868!important;
+}
+
 
 /* ===================================================================
  *  03. typography & general theme styles - (_document-setup.scss) 
@@ -180,7 +192,7 @@ em, i, strong, b {
 }
 
 em, i {
-  font-family: "librebaskerville-italic", serif;
+  font-style: italic;
 }
 
 strong, b {
@@ -1640,7 +1652,12 @@ header .header-logo a {
   padding-top: 16.2rem;
   padding-bottom: 15rem;
 }
-.home-content-tablecell h2 {
+.nuevo-tango .home-content-tablecell .row {
+  position: relative;
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+}
+.home-content-tablecell h2, #events.nuevo-tango-program .section-intro h2 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 2.2rem;
   color: white;
@@ -1660,6 +1677,9 @@ header .header-logo a {
   font-size: 9rem;
   line-height: 1.133;
   color: #FFFFFF;
+}
+.nuevo-tango .home-content-tablecell h1 {
+  font-size: 6rem;
 }
 .home-content-tablecell .more {
   margin: 4.8rem 0 0 0;
@@ -2076,6 +2096,23 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   background-position: center 30%;
   background-size: cover;
   background-attachment: fixed;
+}
+
+#events.nuevo-tango-program {
+  background-color: #151515;
+  background-image: url(../images/program_1.png);
+  background-repeat: no-repeat;
+  background-position: center 30%;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#events.nuevo-tango-program .overlay {
+  background-color: rgb(225 225 225 / 36%);
+}
+
+#events.nuevo-tango-program .gradient-overlay {
+  background: none;
 }
 
 #events .overlay {
