--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1610,7 +1610,7 @@ section {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 15px;
-  color: #68A4C4;
+  color: #137868;
 }
 
 .team .member .member-info p {
