--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ html {
   box-shadow: 0 0 0 0.25rem #e6c16f8a;
 }
 
+.padding-top-4 {
+    padding-top: 4em;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
